@@ -1,0 +1,7 @@
+<?php
+
+namespace PayGate\PayWeb\Logger;
+
+class Logger extends \Monolog\Logger
+{
+}
