@@ -34,6 +34,7 @@
                 <can_void>1</can_void>
                 <can_refund>0</can_refund>
                 <can_use_for_multishipping>1</can_use_for_multishipping>
+                <enable_logging>0</enable_logging>
             </paygate>
         </payment>
     </default>
