@@ -73,4 +73,5 @@ img.payment-type-label-img {
     height: 20px;
     margin-left: auto !important;
 }
+
 /* payment types style end */
