@@ -57,24 +57,24 @@
         <!-- /ko -->
 
         <!-- ko if:(paymentTypesEnabled() != 0) -->
-        <div class="payment-types" >
-            <label class="label" >
+        <div class="payment-types">
+            <label class="label">
                 <span><!-- ko i18n: 'Select Payment Type: ' --><!-- /ko --></span>
             </label>
             <br/>
-            <ul class="types" >
+            <ul class="types">
                 <!-- ko foreach: { data: JSON.parse(getPaymentTypesList()), as: 'option' } -->
                 <li class="option-type" onclick="jQuery(this).find('input[name=payment-type]').prop('checked', true);">
-                            <input class="paygate-payment-type" data-bind="attr: {'value': option.value}"
-                                   name="payment-type"
-                                   type="radio"/>
-                            <label class="label">
-                                <span class="payment-type-label" ><!-- ko i18n: option.label --><!-- /ko --></span>
-                                <span class="payment-type-label-img" >
-                                    <img class="payment-type-label-img" alt="" data-bind="attr: {'src': option.image}"  />
+                    <input class="paygate-payment-type" data-bind="attr: {'value': option.value}"
+                           name="payment-type"
+                           type="radio"/>
+                    <label class="label">
+                        <span class="payment-type-label"><!-- ko i18n: option.label --><!-- /ko --></span>
+                        <span class="payment-type-label-img">
+                                    <img alt="" class="payment-type-label-img" data-bind="attr: {'src': option.image}"/>
                                 </span>
-                            </label>
-                        </li>
+                    </label>
+                </li>
                 <!-- /ko -->
             </ul>
         </div>
